--- a/gastrobot/recetas/templates/recetas/mis_recetas_view.html
+++ b/gastrobot/recetas/templates/recetas/mis_recetas_view.html
@@ -22,7 +22,9 @@
                <!-- Botón Ver receta -->
             <div class="mt-4">
               <a href="{% url 'recetas:detalle_receta_guardada' receta.id %}"
-                class="inline-flex items-center justify-center px-4 py-2 bg-indigo-600 text-white text-sm font-medium rounded-md hover:bg-indigo-700 transition-all duration-200 shadow focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                class="inline-flex items-center justify-center px-4 py-2 bg-indigo-600 text-white text-sm font-medium rounded-md
+                 hover:bg-indigo-700 transition-all duration-200 shadow focus:outline-none focus:ring-2 focus:ring-offset-2
+                  focus:ring-indigo-500">
                 🍽️ Ver receta
               </a>
             </div>
