--- a/gastrobot/core/templates/core/home.html
+++ b/gastrobot/core/templates/core/home.html
@@ -11,7 +11,7 @@
   </p>
   <div class="mt-6">
     <a href="{% url 'asistente' %}" class="inline-block bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-2 px-6 rounded-lg transition">
-      🚀 Generar Receta
+      Generar Receta
     </a>
   </div>
 </section>
@@ -123,7 +123,7 @@
   </p>
   <div class="mt-6">
     <a href="{% url 'asistente' %}" class="inline-block bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-2 px-6 rounded-lg transition">
-      🚀 Empieza ahora
+      Empieza ahora
     </a>
   </div>
 </section>
